--- a/src/app/pages/forms/personal-info-form/personal-info-form.component.html
+++ b/src/app/pages/forms/personal-info-form/personal-info-form.component.html
@@ -8,7 +8,7 @@
 
     <div class="w-full flex flex-col gap-6 pb-6">
         <div class="file-upload-group flex flex-col lg:flex-row items-start w-full gap-4">
-            <div [style.backgroundImage]="selectedFileUrl ? 'url(' + selectedFileUrl + ')' : 'url(' + customerProfilePhoto + ')'"
+            <div [style.backgroundImage]="'url(' + selectedFileUrl + ')'"
                 id="profile-btn-change"
                 class="bg-cover bg-center bg-no-repeat w-16 flex-shrink-0 h-16 rounded-full border border-[#EAECF0]">
             </div>
