--- a/src/app/pages/forms/education-form/education-form.component.html
+++ b/src/app/pages/forms/education-form/education-form.component.html
@@ -7,23 +7,114 @@
 
 
     <div class="w-full flex flex-col gap-6 pb-6">
-       
 
+        <!-- Section for adding education -->
+        <div class="experience-section flex flex-col items-start mt-12">
+
+            <!-- <span class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Experiences</span> -->
+
+
+            <!-- Div holding the experiences as a group -->
+            <div class="flex flex-col gap-12 w-full mt-4">
+                <ng-container formArrayName="education">
+                    @for (education of educationSectionFormArray; track education; let i = $index) {
+                    <ng-container [formGroupName]="i">
+                        <!-- A single experience, labelled in order using $index -->
+                        <div class="single-experience flex flex-col items-start gap-4 w-full">
+                            <div class="number Raleway-Medium text-3xl">{{i + 1}}.</div>
+
+                            <div
+                                class="border border-dashed border-border-color flex flex-col items-start w-full gap-6 rounded-2xl p-4">
+                                <div class="input-group flex flex-col items-start gap-1 w-full">
+                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Institution</span>
+                                    <input
+                                        class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                        placeholder="eg. University of Ghana" type="text" formControlName="institution">
+                                </div>
+
+                                <div class="input-group flex flex-col items-start gap-1 w-full">
+                                    <span
+                                        class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Certification</span>
+                                    <input
+                                        class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                        placeholder="eg. Degree" type="text" formControlName="certification">
+                                </div>
+
+
+                                 <!-- Field of study -->
+
+                                 <div class="input-group flex flex-col items-start gap-1 w-full">
+                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Field of Study</span>
+                                    <input
+                                        class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                        placeholder="eg. BSc. Computer Science" type="text"
+                                        formControlName="fieldOfStudy">
+                                </div>
+
+
+                                <!-- Time Period section -->
+                                <div class="time-section flex flex-col items-start gap-4">
+                                    <span class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Time
+                                        Period</span>
+
+                                    <div class="flex items-center gap-2">
+                                        <div class="input-group flex flex-col items-start gap-1 w-full">
+                                            <span
+                                                class="text-main-txt-color Raleway-Regular text-sm xl:text-base">From</span>
+                                            <input
+                                                class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                                placeholder="eg. Jan 2022" type="text" formControlName="startDate">
+                                        </div>
+
+                                        <div class="input-group flex flex-col items-start gap-1 w-full">
+                                            <span
+                                                class="text-main-txt-color Raleway-Regular text-sm xl:text-base">To</span>
+                                            <input
+                                                class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                                placeholder="eg. Dec 2022" type="text" formControlName="endDate">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button class="flex flex-row bg-[#FEE4E2] items-center gap-2 py-4 px-6 rounded-lg mt-8"
+                                    type="button" (click)="removeEducation(i)">
+                                    <img class="w-4" src="/assets/icons/trash.svg" alt="">
+                                    <span class="Inter-SemiBold text-[#B42318]">Remove Education</span>
+                                </button>
+                            </div>
+
+                        </div>
+                    </ng-container>
+                    }
+                </ng-container>
+            </div>
+
+
+            <button class="flex flex-row bg-[#EDF6FF] items-center gap-2 py-4 px-6 rounded-lg mt-8" type="button"
+                (click)="addEducation()">
+                <img class="w-4" src="/assets/icons/add.svg" alt="">
+                <span class="Inter-SemiBold text-blue">Add new Education</span>
+            </button>
+
+
+
+
+        </div>
 
     </div>
 
 
 
     <div class="button-group flex items-center gap-4 w-full pb-12">
-        <!-- <div class="flex items-center gap-4 w-full">
-            <button disabled
+        <div class="flex items-center gap-4 w-full">
+            <button (click)="onPreviousClick(2)"
             class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
-            href="">Cancel</button>
+            href="">Previous</button>
 
-            <button (click)="saveForm()"
+            <button
             class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
-            href="">Save & Continue</button>
-        </div> -->
+            href="">Save to Collection</button>
+        </div>
 
     </div>
 </form>
