--- a/src/app/pages/forms/personal-info-form/personal-info-form.component.html
+++ b/src/app/pages/forms/personal-info-form/personal-info-form.component.html
@@ -8,10 +8,10 @@
 
     <div class="w-full flex flex-col gap-6 pb-6">
         <div class="file-upload-group flex flex-col lg:flex-row items-start w-full gap-4">
-            <div [style.backgroundImage]="'url(' + selectedFileUrl + ')'"
+            <!-- <div [style.backgroundImage]="selectedFileUrl ? 'url(' + selectedFileUrl + ')' : 'url(' + this.resumeForm.get('profileImage')?.value + ')'"
                 id="profile-btn-change"
                 class="bg-cover bg-center bg-no-repeat w-16 flex-shrink-0 h-16 rounded-full border border-[#EAECF0]">
-            </div>
+            </div> -->
 
             <input formControlName="profileImage" (change)="onFileSelected($event)" class="hidden"
                 type="file" id="input-file" />
@@ -201,11 +201,11 @@
 
     <div class="button-group flex items-center gap-4 w-full pb-12">
         <div class="flex items-center gap-4 w-full">
-            <button disabled
+            <!-- <button disabled
             class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
-            href="">Cancel</button>
+            href="">Cancel</button> -->
 
-            <button (click)="saveForm()"
+            <button (click)="onContinueClick(1)"
             class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
             href="">Save & Continue</button>
         </div>
