--- a/src/assets/templates/template-two/template-two.component.html
+++ b/src/assets/templates/template-two/template-two.component.html
@@ -1,7 +1,7 @@
 <section class="main-container print_area w-full h-fit p-6 flex flex-col gap-8">
     <div class="header flex items-end justify-between">
 
-        <div class="left flex items-center gap-2">
+        <!-- <div class="left flex items-center gap-2">
             <div [style.backgroundImage]="selectedImageUrl ? 'url(' + selectedImageUrl + ')' : 'url(' + customerProfilePhoto + ')'" [style.backgroundColor]="textColor" class="w-9 h-9 rounded-full bg-cover bg-center bg-no-repeat">
                 
             </div>
@@ -10,7 +10,7 @@
                 <span [style.color]="textColor" class="RC-Bold uppercase text-xl">{{formData.firstname}} {{formData.lastname}}</span>
                 <span class="RM-Medium text-[#6F7588] subtxt uppercase text-sm">{{formData.jobTitle}}</span>
             </div>
-        </div>
+        </div> -->
         
 
         <div class="right flex flex-col items-end">
