--- a/src/app/pages/forms/experience-form/experience-form.component.html
+++ b/src/app/pages/forms/experience-form/experience-form.component.html
@@ -13,7 +13,7 @@
                 class=" resize-none focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular"
                 placeholder="What do you wanna say about yourself?" type="text" formControlName="profile"></textarea>
 
-            <button
+            <button (click)="openAIDialog()"
                 class="generate-ai-btn flex mt-6 items-center w-fit gap-2 rounded-lg bg-blue border border-[#D0D5DD] text-[#344054] py-3 px-6">
 
                 <img src="/assets/icons/ai-magic.svg" alt="">
@@ -21,7 +21,7 @@
             </button>
         </div>
 
-      
+
 
         <!-- Section for inputting skills -->
         <div class="skills-section w-full flex flex-col gap-6">
@@ -29,17 +29,19 @@
 
             <div class="chip-group flex flex-row flex-wrap gap-3">
                 @for (skillControl of skills.controls; track $index) {
-                    <div [style.background]="skillControl.value.backgroundColor" [style.color]="skillControl.value.color" class="Raleway-SemiBold chip w-fit text-sm rounded-3xl flex items-center justify-center p-2 px-4">
-                      {{ skillControl.value.name }}
+                <div [style.background]="skillControl.value.backgroundColor" [style.color]="skillControl.value.color"
+                    class="Raleway-SemiBold chip w-fit text-sm rounded-3xl flex items-center justify-center p-2 px-4">
+                    {{ skillControl.value.name }}
 
-                      <img [style.filter]="skillControl.value.filter" (click)="removeSkill($index)" class="w-8 cursor-pointer" src="/assets/icons/close-white.svg" alt="">
-                    </div>
-              }
+                    <img [style.filter]="skillControl.value.filter" (click)="removeSkill($index)"
+                        class="w-8 cursor-pointer" src="/assets/icons/close-white.svg" alt="">
+                </div>
+                }
             </div>
-            
- 
-              <!-- <input type="text" placeholder="Add skill" (keydown.enter)="addSkill($event)"> -->
-              <div class="input-group flex flex-col items-start gap-1 w-full">
+
+
+            <!-- <input type="text" placeholder="Add skill" (keydown.enter)="addSkill($event)"> -->
+            <div class="input-group flex flex-col items-start gap-1 w-full">
                 <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Add Skill</span>
                 <input #skillInput (keydown.enter)="addSkill(skillInput.value)"
                     class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
@@ -58,21 +60,25 @@
             <div class="flex flex-col gap-12 w-full mt-4">
                 <ng-container formArrayName="experiences">
                     @for (experience of experienceSectionFormArray; track experience; let i = $index) {
-                        <ng-container [formGroupName]="i">
-                            <!-- A single experience, labelled in order using $index -->
-                            <div class="single-experience flex flex-col items-start gap-4 w-full">
-                                <div class="number Raleway-Medium text-3xl">{{i + 1}}.</div>
+                    <ng-container [formGroupName]="i">
+                        <!-- A single experience, labelled in order using $index -->
+                        <div class="single-experience flex flex-col items-start gap-4 w-full">
+                            <div class="number Raleway-Medium text-3xl">{{i + 1}}.</div>
 
-                            <div class="border border-dashed border-border-color flex flex-col items-start w-full gap-6 rounded-2xl p-4">
+                            <div
+                                class="border border-dashed border-border-color flex flex-col items-start w-full gap-6 rounded-2xl p-4">
                                 <div class="input-group flex flex-col items-start gap-1 w-full">
-                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Job Title</span>
+                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Job
+                                        Title</span>
                                     <input
                                         class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
                                         placeholder="eg. Frontend Developer" type="text" formControlName="jobTitle">
                                 </div>
 
                                 <div class="input-group flex flex-col items-start gap-1 w-full">
-                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Company/Organization Name</span>
+                                    <span
+                                        class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Company/Organization
+                                        Name</span>
                                     <input
                                         class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
                                         placeholder="eg. Frontend Developer" type="text" formControlName="company">
@@ -81,18 +87,21 @@
 
                                 <!-- Time Period section -->
                                 <div class="time-section flex flex-col items-start gap-4">
-                                    <span class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Time Period</span>
+                                    <span class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Time
+                                        Period</span>
 
                                     <div class="flex items-center gap-2">
                                         <div class="input-group flex flex-col items-start gap-1 w-full">
-                                            <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">From</span>
+                                            <span
+                                                class="text-main-txt-color Raleway-Regular text-sm xl:text-base">From</span>
                                             <input
                                                 class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
                                                 placeholder="eg. Jan 2022" type="text" formControlName="startDate">
                                         </div>
 
                                         <div class="input-group flex flex-col items-start gap-1 w-full">
-                                            <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">To</span>
+                                            <span
+                                                class="text-main-txt-color Raleway-Regular text-sm xl:text-base">To</span>
                                             <input
                                                 class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
                                                 placeholder="eg. Dec 2022" type="text" formControlName="endDate">
@@ -103,66 +112,77 @@
                                 <!-- Type of employment -->
 
                                 <div class="input-group flex flex-col items-start gap-1 w-full">
-                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Type of Employment</span>
+                                    <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Type of
+                                        Employment</span>
                                     <input
                                         class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
-                                        placeholder="eg. Internship, Contract, Permanent" type="text" formControlName="type">
+                                        placeholder="eg. Internship, Contract, Permanent" type="text"
+                                        formControlName="type">
                                 </div>
 
-                                 <!-- Points section -->
-                                 <div class="points-section flex flex-col items-start gap-4 w-full">
+                                <!-- Points section -->
+                                <div class="points-section flex flex-col items-start gap-4 w-full">
                                     <div class="flex items-center justify-between w-full">
-                                        <span class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Points</span>
+                                        <span
+                                            class="text-main-txt-color Raleway-Medium text-sm xl:text-base">Points</span>
 
-                                        <button class="flex flex-row bg-[#EDF6FF] items-center gap-2 py-4 px-6 rounded-lg mt-8" type="button" (click)="addPoint(i)">
+                                        <button
+                                            class="flex flex-row bg-[#EDF6FF] items-center gap-2 py-4 px-6 rounded-lg mt-8"
+                                            type="button" (click)="addPoint(i)">
                                             <img class="w-4" src="/assets/icons/add.svg" alt="">
                                             <span class="Inter-SemiBold text-blue">Add new Point</span>
                                         </button>
                                     </div>
-                                    
+
 
                                     <div class="flex flex-col items-center gap-3 w-full">
                                         <ng-container formArrayName="points">
                                             @for (points of experience.get('points')?.controls; track $index) {
-                                                <div class="input-group flex flex-col items-start gap-3 w-full">
-                                                    <div class="flex items-center justify-between w-full">
-                                                        <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Point {{$index + 1}}</span>
+                                            <div class="input-group flex flex-col items-start gap-3 w-full">
+                                                <div class="flex items-center justify-between w-full">
+                                                    <span
+                                                        class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Point
+                                                        {{$index + 1}}</span>
 
-                                                        <img (click)="removePoint(i, $index)" class="cursor-pointer" src="/assets/icons/trash.svg" alt="">
-                                                    </div>
-                                                    <textarea rows="5"
-                                                        class="resize-none focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
-                                                        placeholder="eg. Dec 2022" type="text" formControlName="{{$index}}"></textarea>
+                                                    <img (click)="removePoint(i, $index)" class="cursor-pointer"
+                                                        src="/assets/icons/trash.svg" alt="">
                                                 </div>
+                                                <textarea rows="5"
+                                                    class="resize-none focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
+                                                    placeholder="eg. Dec 2022" type="text"
+                                                    formControlName="{{$index}}"></textarea>
+                                            </div>
                                             }
-                                            
+
                                         </ng-container>
                                     </div>
 
 
                                 </div>
 
-                                <button class="flex flex-row bg-[#FEE4E2] items-center gap-2 py-4 px-6 rounded-lg mt-8" type="button" (click)="removeExperience(i)">
+                                <button class="flex flex-row bg-[#FEE4E2] items-center gap-2 py-4 px-6 rounded-lg mt-8"
+                                    type="button" (click)="removeExperience(i)">
                                     <img class="w-4" src="/assets/icons/trash.svg" alt="">
                                     <span class="Inter-SemiBold text-[#B42318]">Remove Experience</span>
                                 </button>
                             </div>
 
-                            </div>
-                            
-                        </ng-container>
+                        </div>
+
+                    </ng-container>
                     }
                 </ng-container>
             </div>
 
 
-                <button class="flex flex-row bg-[#EDF6FF] items-center gap-2 py-4 px-6 rounded-lg mt-8" type="button" (click)="addExperience()">
-                    <img class="w-4" src="/assets/icons/add.svg" alt="">
-                    <span class="Inter-SemiBold text-blue">Add new Experience</span>
-                  </button>
-               
+            <button class="flex flex-row bg-[#EDF6FF] items-center gap-2 py-4 px-6 rounded-lg mt-8" type="button"
+                (click)="addExperience()">
+                <img class="w-4" src="/assets/icons/add.svg" alt="">
+                <span class="Inter-SemiBold text-blue">Add new Experience</span>
+            </button>
 
-        
+
+
 
         </div>
 
@@ -175,13 +195,57 @@
     <div class="button-group flex items-center gap-4 w-full pb-12">
         <div class="flex items-center gap-4 w-full">
             <button (click)="onPreviousClick(0)"
-            class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
-            href="">Previous</button>
+                class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
+                href="">Previous</button>
 
             <button (click)="onContinueClick(2)"
-            class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
-            href="">Save & Continue</button>
+                class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
+                href="">Save & Continue</button>
         </div>
 
     </div>
+
+    @if (isAIDialogOpen) {
+    <div class="ai-dialog w-full h-full absolute top-0 left-0 flex items-center justify-center">
+        <!-- <div class="layer absolute top-0 left-0 w-full h-full bg-[#00000050] z-40">
+    
+            </div> -->
+
+        <div
+            class="dialog-container border border-border-color w-3/4 h-2/4 bg-white rounded-xl relative z-[9999] flex flex-col overflow-hidden">
+            <div class="header w-full flex items-center justify-between border-b py-2 px-5 border-border-color">
+                <span class="SF-Medium text-lg text-main-txt-color">Generate</span>
+
+                <img (click)="openAIDialog()" class="cursor-pointer" src="/assets/icons/close.svg" alt="">
+            </div>
+
+            <div class="content w-full p-5 h-[-webkit-fill-available] flex flex-row gap-5 overflow-hidden">
+
+                <div class="left w-2/4 flex flex-col gap-5">
+                    <textarea [ngModelOptions]="{standalone: true}" [(ngModel)]="textareaValue"
+                        [placeholder]="placeholder" (focus)="onFocus($event)" (keydown)="onKeyDown($event)"
+                        class="bg-[#F5F5F5] resize-none rounded-lg focus:outline-blue flex flex-grow py-3 px-4 2xl:py-4 2xl:px-5 placeholder:text-[#667085] Inter-Regular"
+                        name="" id="" rows="10"></textarea>
+
+
+
+                    <button (click)="generateContent()"
+                        class="generate-ai-btn flex items-center justify-center w-full gap-2 rounded-lg bg-blue border text-[#344054] py-3 px-6">
+
+                        <img src="/assets/icons/ai-magic.svg" alt="">
+                        <span class="text-white Raleway-Medium">Generate</span>
+                    </button>
+                </div>
+
+                @if (isContentGenerated) {
+                <div class="generated-content w-2/4 overflow-x-hidden overflow-y-auto animate-pulse rounded-lg py-3 px-4 2xl:py-4 2xl:px-5 bg-[#F5F5F5]">
+                    <span class="SF-Medium text-[#667085]">{{generatedContent}}</span>
+                </div>
+                }
+
+            </div>
+        </div>
+    </div>
+    }
+
 </form>
