--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,12 @@ app-cv-editor, app-cv-builder{
 
 
 @font-face {
+    font-family: 'Consolas';
+    src: url('/assets/fonts/Consolas/Consolas.ttf');
+}
+
+
+@font-face {
     font-family: 'SF-Regular';
     src: url('/assets/fonts/SF/SFPRODISPLAYREGULAR.OTF');
 }
@@ -264,6 +270,11 @@ app-cv-editor, app-cv-builder{
 @font-face {
     font-family: 'RM-Bold';
     src: url('/assets/fonts/RobotoMono/RobotoMono-Bold.ttf');
+}
+
+
+.Consolas{
+    font-family: 'Consolas';
 }
 
 
